# burndown

./: CMakeLists.txt  LICENSE  README.md  setup_vs2019.bat
apps/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  example.csp
include/burndown/: command.hpp  fileio.hpp  parser.hpp  string_segment.hpp  template.hpp
src/: CMakeLists.txt  command.cpp  fileio.cpp  parser.cpp  template.cpp
tests/: CMakeLists.txt  test_fileio.cpp
